--- a/about.html
+++ b/about.html
@@ -2,7 +2,8 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>Sammy Student | Work hard, play hard</title>
+    <p style="color: hotpink;"
+    <title>  Be fit with Yasmine ! </title> 
     <link rel="stylesheet" href="stylesheets/sammy-style.css">
   </head>
   <body>
