--- a/about.html
+++ b/about.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <p style="color: hotpink;"
+    <p style="color: hotpink; font-size:xx-large"
     <title>  Be fit with Yasmine ! </title> 
     <link rel="stylesheet" href="stylesheets/sammy-style.css">
   </head>
