We needed changes

--- a/about.html
+++ b/about.html
@@ -2,13 +2,14 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <p style="color: hotpink; font-size:xx-large"
+  
     <title>  Be fit with Yasmine ! </title> 
     <link rel="stylesheet" href="stylesheets/sammy-style.css">
   </head>
   <body>
     <header>
-      <p><a href="index.html">Sammy Student</a></p>
+      <p style="color: indianred; font-weight: bolder; font-size: xx-large;"
+      <p><a href="index.html"></a> Be fit with Yasmine ! </p>
       <nav>
         <ul>
           <li><a href="about.html">About</a></li>
