First try out in terms of color

--- a/about.html
+++ b/about.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>Sammy Student | Work hard, play hard</title>
+    <title> Be fit with Yasmine </title>
     <link rel="stylesheet" href="stylesheets/sammy-style.css">
 
     <!-- Global site tag (gtag.js) - Google Analytics -->
@@ -17,7 +17,9 @@
   </head>
   <body>
     <header>
-      <p><a href="index.html">Sammy Student</a></p>
+    <p style="color-scheme: pink;"
+      <p>
+           <a href="index.html"> Yasmine Toure </a></p>
       <nav>
         <ul>
           <li><a href="about.html">About</a></li>
