--- a/about.html
+++ b/about.html
@@ -22,10 +22,10 @@
            <a href="index.html"> Yasmine Toure </a></p>
       <nav>
         <ul>
-          <li><a href="about.html">About</a></li>
-          <li><a href="activities.html">Activities</a></li>
-          <li><a href="experience.html">Experience</a></li>
-          <li><a href="contact.html">Contact</a></li>
+          <li><a href="about.html">About me </a></li>
+          <li><a href="activities.html"> Work out plan</a></li>
+          <li><a href="experience.html"> Work out videos </a></li>
+          <li><a href="contact.html"> Yes you can contact me  </a></li>
         </ul>
       </nav>
     </header>
@@ -33,7 +33,9 @@
     <div class="page">
       <h1>About Me</h1>
       <p>
-        I'm from Connecticut. I'm passionate about computer science. I hope to create my own application software to change the world.
+        I'm from Maryland.
+         I started fitness during my junior year of college and saw how working out changed my life.
+         It's not necessarily about having a new body but feeling mentor mentally and emotionally. I created this webpage to help all the women who have trouble finding time to work out. 
       </p>
       <img src="images/education_icons_IF-02-512.png" alt="an icon of a student with a mortarboard" />
     </div>
