New try to remove sammy from my life

--- a/about.html
+++ b/about.html
@@ -1,18 +1,9 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <meta charset="utf-8">
-    <title> Be fit with Yasmine </title>
-    <link rel="stylesheet" href="stylesheets/sammy-style.css">
+    <p style="font-size: xx-large;"
+    Yasmine's workout sessions
 
-    <!-- Global site tag (gtag.js) - Google Analytics -->
-    <script async src="https://www.googletagmanager.com/gtag/js?id=G-DC57YQEVZJ"></script>
-    <script>
-      window.dataLayer = window.dataLayer || [];
-      function gtag(){dataLayer.push(arguments);}
-      gtag('js', new Date());
-
-      gtag('config', 'G-DC57YQEVZJ');
     </script>
   </head>
   <body>
