--- a/about.html
+++ b/about.html
@@ -7,9 +7,9 @@
     </script>
   </head>
   <body>
-    <header>
+    <header> <p style="outline-color: azure;"
     <p style="color-scheme: pink;"
-      <p>
+      <p style="color-scheme: pink
            <a href="index.html"> Yasmine Toure </a></p>
       <nav>
         <ul>
