--- a/Who I am.html
+++ b/Who I am.html
@@ -220,7 +220,7 @@
       <nav>
         <ul>
           <li><a href="about.html">About me </a></li>
-          <li><a href="activities.html"> Work out plan</a></li>
+          <li><a href="First of all, get to know me.html"> Work out plan</a></li>
           <li><a href="experience.html"> Work out videos </a></li>
           <li><a href="contact.html"> Yes you can contact me  </a></li>
         </ul>
