Update Who I am.html

--- a/Who I am.html
+++ b/Who I am.html
@@ -1,9 +1,7 @@
  <!DOCTYPE html>
-    <html>
-<header> Workout as a woman </header>
 
 <head> 
-  <title> Workout with Yasmine !  </title>
+  <title> WORKOUT WITH YASMINE!!! <p>&#128151;</p>  </title>
 </head>
 
 <body> 
