--- a/Who I am.html
+++ b/Who I am.html
@@ -1,7 +1,7 @@
  <!DOCTYPE html>
 <table style="background-color: coral;"
 <head> 
-  <title> WORKOUT WITH YASMINE!!! <p>&#128151;</p>  </title>
+  <title> WORKOUT WITH YASMINE!!! &#128151; </title>
 </head>
 
 <h1>
