--- a/Who I am.html
+++ b/Who I am.html
@@ -1,6 +1,6 @@
  <!DOCTYPE html>
 <table style="background-color: coral;"
-<head> 
+<body style="background-color: coral;"></body>
   <title> WORKOUT WITH YASMINE!!! &#128151; </title>
 </head>
 
