Update Who I am.html

--- a/Who I am.html
+++ b/Who I am.html
@@ -1,9 +1,18 @@
  <!DOCTYPE html>
 <table style="background-color: coral;"
+
+
+
+<head>
 <body style="background-color: coral;"></body>
   <title> WORKOUT WITH YASMINE!!! &#128151; </title>
-</head>
 
+</head>
+<body style="background-color:grey;">
+   <h1>Products</h1>
+   <p>We have developed more than 10 products till now.</p>
+</body>
+</html>
 <h1>
 
 </h1>
