Update Who I am.html

--- a/Who I am.html
+++ b/Who I am.html
@@ -4,7 +4,7 @@
 
 
 <head>
-<body style="background-color: coral;"></body>
+<body style="background-color:darkkhaki"></body>
   <title> WORKOUT WITH YASMINE!!! &#128151; </title>
 
 </head>
