--- a/Who I am.html
+++ b/Who I am.html
@@ -6,6 +6,36 @@
 <head>
 <body style="background-color:darkkhaki"></body>
   <title> WORKOUT WITH YASMINE!!! &#128151; </title>
+ 
+  <p style="text-align:center;">Learn for free</p>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 </head>
 <body style="background-color:grey;">
