Update Who I am.html

--- a/Who I am.html
+++ b/Who I am.html
@@ -4,7 +4,7 @@
 
 
 <head>
-<body style="background-color:darkkhaki"></body>
+<body style="background-color:rgb(247, 237, 103)"></body>
   <title> WORKOUT WITH YASMINE!!! &#128151; </title>
  
   <p style="text-align:center;">Learn for free</p>
