--- a/Who I am.html
+++ b/Who I am.html
@@ -7,7 +7,7 @@
 <body style="background-color:rgb(219, 89, 152)" ></body>
   <title> WORKOUT WITH YASMINE!!! &#128151; </title>
  
-  <p style="text-align:center;">Learn for free</p>
+  <h1 style="text-align:center; font-size: +5; color: ivory;"> WORKOUT WITH YASMINE: </h1>
 
 
 
