Update Who I am.html

--- a/Who I am.html
+++ b/Who I am.html
@@ -6,10 +6,12 @@
 <head>
 <body style="background-color:rgb(219, 89, 152)" ></body>
   <title> WORKOUT WITH YASMINE!!! &#128151; </title>
+ <div>
+
  
-  <h1 style="text-align:center; font-size: +5; color: ivory;"> WORKOUT WITH YASMINE: </h1>
-
-
+  <h1 style="text-align:center; font-size: +5; font-style: italic; color: ivory;"> WORKOUT WITH YASMINE:
+    A WORKOUT PLAN FOR WOMEN MADE BY A WOMAN </h1> </style> 
+</div>
 
 
 
