--- a/Who I am.html
+++ b/Who I am.html
@@ -4,14 +4,28 @@
 
 
 <head>
-<body style="background-color:rgb(219, 89, 152)" ></body>
+<body style="background-color:pink" ></body>
   <title> WORKOUT WITH YASMINE!!! &#128151; </title>
- <div>
 
- 
-  <h1 style="text-align:center; font-size: +5; font-style: italic; color: ivory;"> WORKOUT WITH YASMINE:
-    A WORKOUT PLAN FOR WOMEN MADE BY A WOMAN </h1> </style> 
-</div>
+
+ <div>
+  <h1 style="text-align:center; font-size: +5; font-style: italic; color: ivory;"> WORKOUT WITH YASMINE:</h1> </style> 
+<h2 style="text-align:center; font-size: +4; font-style: italic; color: ivory;"> A WORKOUT PLAN FOR WOMEN MADE BY A WOMAN </h2>> </h2>
+ </div>
+
+
+ <body>
+
+  <a href="activities.html" h2 style= "color: ivory; font-style: oblique;" > The girl behind the website </h2>
+  
+  <p></p>
+  
+  <a href="default.asp"><img src="smiley.gif" alt="HTML tutorial" style="width:42px;height:42px;"></a>
+  
+  </body>
+
+
+
 
 
 
