--- a/Who I am.html
+++ b/Who I am.html
@@ -1,27 +1,27 @@
- <!DOCTYPE html>
-<table style="background-color: coral;"
+<!DOCTYPE html>
+<table style="background-color: coral;" <head>
 
-
-
-<head>
-<body style="background-color:pink" ></body>
+  <body style="background-color:pink"></body>
   <title> WORKOUT WITH YASMINE!!! &#128151; </title>
 
 
- <div>
-  <h1 style="text-align:center; font-size: +5; font-style: italic; color: ivory;"> WORKOUT WITH YASMINE:</h1> </style> 
-<h2 style="text-align:center; font-size: +4; font-style: italic; color: ivory;"> A WORKOUT PLAN FOR WOMEN MADE BY A WOMAN </h2>> </h2>
- </div>
+  <div>
+    <h1 style="text-align:center; font-size: +5; font-style: italic; color: ivory;"> WORKOUT WITH YASMINE:</h1>
+    </style>
+    <h2 style="text-align:center; font-size: +4; font-style: italic; color: ivory;"> A WORKOUT PLAN FOR WOMEN MADE BY A
+      WOMAN </h2>> </h2>
+  </div>
 
 
- <body>
+  <body>
 
-  <a href="activities.html" h2 style= "color: ivory; font-style: oblique;" > The girl behind the website </h2>
-  
-  <p></p>
-  
-  
-  
+    <a href="activities.html" h2 style="color: ivory; font-style: oblique;"> The girl behind the website </h2>
+      <img src="img_2689.jpg"
+
+
+
+
+
   </body>
 
 
@@ -53,232 +53,223 @@
 
 
 
-</head>
-<body style="background-color:grey;">
-   <h1>Products</h1>
-   <p>We have developed more than 10 products till now.</p>
-</body>
-</html>
-<h1>
 
-</h1>
+  </h1>
 
-<body> 
-  <li><a href="First of all, get to know me.html"> </a></li> First of all, get to know me </h1>
-
-  <p> 
-  </p>
-</body>
-
-
-
-
-
-    </html>
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-<!DOCTYPE html>
-<html>
-  <head>
-    <p style="font-size: xx-large;"
-    Yasmine's workout sessions
-
-    </script>
-  </head>
   <body>
-    <header> <p style="outline-color: azure;"
-    <p style="color-scheme: pink;"
-      <p style="color-scheme: pink
-           <a href="index.html"> Yasmine Toure </a></p>
+    <li><a href="First of all, get to know me.html"> </a></li> First of all, get to know me </h1>
+
+    <p>
+    </p>
+  </body>
+
+
+
+
+
+  </html>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+  <!DOCTYPE html>
+  <html>
+
+  <head>
+    <p style="font-size: xx-large;" Yasmine's workout sessions </script>
+  </head>
+
+  <body>
+    <header>
+      <p style="outline-color: azure;" <p style="color-scheme: pink;" <p style="color-scheme: pink
+           <a href=" index.html"> Yasmine Toure </a></p>
       <nav>
         <ul>
           <li><a href="about.html">About me </a></li>
           <li><a href="First of all, get to know me.html"> Work out plan</a></li>
           <li><a href="experience.html"> Work out videos </a></li>
-          <li><a href="contact.html"> Yes you can contact me  </a></li>
+          <li><a href="contact.html"> Yes you can contact me </a></li>
         </ul>
       </nav>
     </header>
@@ -287,8 +278,9 @@
       <h1>About Me</h1>
       <p>
         I'm from Maryland.
-         I started fitness during my junior year of college and saw how working out changed my life.
-         It's not necessarily about having a new body but feeling mentor mentally and emotionally. I created this webpage to help all the women who have trouble finding time to work out. 
+        I started fitness during my junior year of college and saw how working out changed my life.
+        It's not necessarily about having a new body but feeling mentor mentally and emotionally. I created this webpage
+        to help all the women who have trouble finding time to work out.
       </p>
       <img src="images/education_icons_IF-02-512.png" alt="an icon of a student with a mortarboard" />
     </div>
@@ -299,4 +291,5 @@
       </p>
     </footer>
   </body>
-</html>
+
+  </html>
