--- a/Who I am.html
+++ b/Who I am.html
@@ -16,7 +16,9 @@
   <body>
 
     <a href="activities.html" h2 style="color: ivory; font-style: oblique;"> The girl behind the website </h2>
-      <img src="img_2689.jpg"
+      <img src="papi.jpg">
+
+      
 
 
 
