--- a/activities.html
+++ b/activities.html
@@ -2,45 +2,25 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>Sammy Student | Work hard, play hard</title>
-    <link rel="stylesheet" href="stylesheets/sammy-style.css">
+    <title>WORKOUT WITH YASMINE!!! &#128151; </title>
 
-    <!-- Global site tag (gtag.js) - Google Analytics -->
-    <script async src="https://www.googletagmanager.com/gtag/js?id=G-DC57YQEVZJ"></script>
-    <script>
-      window.dataLayer = window.dataLayer || [];
-      function gtag(){dataLayer.push(arguments);}
-      gtag('js', new Date());
+    <body style="background-color:pink"></body>
+  <img src="image1.jpg" alt="my first pic for the website"
 
-      gtag('config', 'G-DC57YQEVZJ');
-    </script>
-  </head>
-  <body>
-    <header>
-      <p><a href="index.html">Sammy Student</a></p>
-      <nav>
-        <ul>
-          <li><a href="about.html">About</a></li>
-          <li><a href="activities.html">Activities</a></li>
-          <li><a href="experience.html">Experience</a></li>
-          <li><a href="contact.html">Contact</a></li>
-        </ul>
-      </nav>
-    </header>
 
-    <div class="page">
-      <h1>Hobbies and Activities</h1>
-      <ul>
-        <li>Rowing</li>
-        <li>Singing</li>
-        <li>Being in a Fraternity</li>
-      </ul>
-    </div>
+<div>
 
-    <footer>
-      <p>&copy; 2021 Sammy Student |
-        <a href="https://github.com/prof-rossetti/student-site">source code</a>
-      </p>
-    </footer>
-  </body>
-</html>
+
+  <p style= color:ivory;> 
+    Hello, I am Yasmine Toure and I am a junior at the George Washington University. I study Business with a concentration in International Business. 
+    I am also a gym enthusiast and I love sharing my passion for workout with people around me.
+
+    I started working out at the begining of the semester and I realized that it really helped me overcoming all my challenges this semester. Working out is a real energy and mood booster and it also helps with insomnia.
+    I know that it can be hard for some people, especially women to start working out because they may not know where to start, how to start, and what are the best meal plans to go with the workout.
+
+    THAT'S WHY I AM HERE TO HELP YOU AND MAKE SURE THAT YOU START WORKING OUT, THAT YOU ENJOY IT, AND STAY CONSISTENT IN YOUR ROUTINE!!!
+  </p>
+
+  /div>
+
+
