--- a/index.html
+++ b/index.html
@@ -1,26 +1,117 @@
 <!DOCTYPE html>
-<html>
+<table style="background-color: coral;" <head>
+
+  <body style="background-color:pink"></body>
+  <title> WORKOUT WITH YASMINE!!! &#128151; </title>
+
+
+  <div>
+    <h1 style="text-align:center; font-size: +5; font-style: italic; color: ivory;"> WORKOUT WITH YASMINE:</h1>
+    </style>
+    <h2 style="text-align:center; font-size: +4; font-style: italic; color: ivory;"> A WORKOUT PLAN FOR WOMEN MADE BY A
+      WOMAN </h2>> </h2>
+  </div>
+
+
+  <body>
+
+    <a href="activities.html" h2 style="color: ivory; font-style: oblique;"> The girl behind the website </h2>
+
+
+      <img src="images/IMG_2689.jpg">
+
+
+
+  </body>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+  </h1>
+
+  <body>
+    <li><a href="First of all, get to know me.html"> </a></li> First of all, get to know me </h1>
+
+    <p>
+    </p>
+  </body>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+  <!DOCTYPE html>
+  <html>
+
   <head>
-    <meta charset="utf-8">
-    <title>Sammy Student | Work hard, play hard</title>
-    <link rel="stylesheet" href="stylesheets/sammy-style.css">
+    <p style="font-size: xx-large;" Yasmine's workout sessions </script>
   </head>
+
   <body>
     <header>
-      <p><a href="index.html">Sammy Student</a></p>
+      <p style="outline-color: azure;" <p style="color-scheme: pink;" <p style="color-scheme: pink
+           <a href=" index.html"> Yasmine Toure </a></p>
       <nav>
         <ul>
-          <li><a href="about.html">About</a></li>
-          <li><a href="activities.html">Activities</a></li>
-          <li><a href="experience.html">Experience</a></li>
-          <li><a href="contact.html">Contact</a></li>
+          <li><a href="about.html">About me </a></li>
+          <li><a href="First of all, get to know me.html"> Work out plan</a></li>
+          <li><a href="experience.html"> Work out videos </a></li>
+          <li><a href="contact.html"> Yes you can contact me </a></li>
         </ul>
       </nav>
     </header>
 
     <div class="page">
-      <h1>Sammy Student</h1>
-      <p>Welcome to my site.</p>
+      <h1>About Me</h1>
+      <p>
+        I'm from Maryland.
+        I started fitness during my junior year of college and saw how working out changed my life.
+        It's not necessarily about having a new body but feeling mentor mentally and emotionally. I created this webpage
+        to help all the women who have trouble finding time to work out.
+      </p>
+      <img src="images/education_icons_IF-02-512.png" alt="an icon of a student with a mortarboard" />
     </div>
 
     <footer>
@@ -28,16 +119,6 @@
         <a href="https://github.com/prof-rossetti/student-site">source code</a>
       </p>
     </footer>
-
-    <script type="text/javascript">
-
-        //
-        // FYI: this is JavaScript!
-        //
-        var myMessage = "Hello World"
-        console.log(myMessage)
-
-
-    </script>
   </body>
-</html>
+
+  </html>
