--- a/index.html
+++ b/index.html
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
-<table style="background-color: coral;" <head>
 
   <body style="background-color:pink"></body>
   <title> WORKOUT WITH YASMINE!!! &#128151; </title>
 
 
   <div>
-    <h1 style="text-align:center; font-size: +5; font-style: italic; color: ivory;"> WORKOUT WITH YASMINE:</h1>
-    </style>
+    <h1 style="text-align:center; font-size: +5; font-style: italic; color: ivory;"> WORKOUT WITH YASMINE :</h1> 
+  <h2> style="text-align:center; &#x1f3cb; </h2>  
+  </style>
     <h2 style="text-align:center; font-size: +4; font-style: italic; color: ivory;"> A WORKOUT PLAN FOR WOMEN MADE BY A
       WOMAN </h2>> </h2>
   </div>
@@ -15,10 +15,11 @@
 
   <body>
 
-    <a href="activities.html" h2 style="color: ivory; font-style: oblique;"> The girl behind the website </h2>
+    <div><a href="activities.html" h2 style="color: ivory; font-style: oblique;"> The girl behind the website :GET TO KNOW ME </h2> </div>
 
 
-      <img src="images/IMG_2689.jpg">
+     
+   <img src="images/IMG_2689.jpg" width="400" height="400">
 
 
 
