--- a/Behind.html
+++ b/Behind.html
@@ -4,11 +4,11 @@
   <div>
     <h1 style="text-align:center; font-size: +5; font-style: italic; color: ivory;"> WORKOUT WITH YASMINE :</h1> 
     <h2 style="text-align:center; font-size: +4; font-style: italic; color: ivory;"> A WORKOUT PLAN FOR WOMEN MADE BY A
-      WOMAN </h2>> </h2>
+      WOMAN </h2> </h2>
   </div>
 
-
-
+  <p style="text-align:center;"><img src="images/image1.jpg" width="350" height="450"> </p>
+ 
 
 
 
