--- a/index.html
+++ b/index.html
@@ -1,18 +1,17 @@
 <!DOCTYPE html>
-  <body style="background-color:pink"></body>
+  <body style="background-color:pink">
 
   <title> WORKOUT WITH YASMINE!!! &#128151; </title>
+
   <div>
     <h1 style="text-align:center; font-size: +5; font-style: italic; color: ivory;"> WORKOUT WITH YASMINE :</h1> 
     <h2 style="text-align:center; font-size: +4; font-style: italic; color: ivory;"> A WORKOUT PLAN FOR WOMEN MADE BY A
       WOMAN </h2> </h2>
   </div>
 
-  <body>
     <div><a href="Behind.html" h2 style="color: ivory; font-style: oblique;"> The girl behind the website :GET TO KNOW ME </h2> </div>
    <img src="images/IMG_2689.jpg" width="400" height="400">
-    </body>
-    
+  
       <nav>
         <ul>
           <li><a href="about.html">About me </a></li>
