--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       WOMAN </h2> </h2>
   </div>
 
-    <div><a href="Behind.html" h2 style="color: ivory; font-style: oblique;"> The girl behind the website :GET TO KNOW ME </h2> </div>
+    <div><a href="Behind.html" h2 style="color: ivory; font-style: oblique; font-size: +2;"> The girl behind the website :GET TO KNOW ME </h2> </div>
    <img src="images/IMG_2689.jpg" width="400" height="400">
   
       <nav>
