Good things are happening

--- a/Behind.html
+++ b/Behind.html
@@ -18,47 +18,11 @@ encourage them in started their workout journey with structured workout plans, m
 
 <p style="text-align:center; font-size:x-large; color:aliceblue"> As a student, I am interest in working in either Marketing or Finance. If you are a recruiter by any chance or if your company is hiring for a Marketing or Finance position, feel free to downlaod my resume and contact me if you believe that I would be a good fit for the position.  </p>
 
-<a>
-</a>
+
+<p style= "font-size:large; color:aliceblue">
+<a href="Toure_Yasmine_GeorgeWashingtonUniversity.pdf"> Please, download my resume ! </a> <br>
+<a href="Current transcript.pdf"> Feel free to also download my transcript #128522 </a> <br>
+<a href="https://www.linkedin.com/in/yasmine-toure-4357a4207/"> Contact me on LinkedIn </a> </p>
+
 </body>
  
-
-
-
-
-<!DOCTYPE html>
-<html>
-  <head>
-    <meta charset="utf-8">
-    <title>Sammy Student | Work hard, play hard</title>
-    <link rel="stylesheet" href="stylesheets/sammy-style.css">
-  </head>
-  <body>
-    <header>
-      <p><a href="index.html">Sammy Student</a></p>
-      <nav>
-        <ul>
-          <li><a href="about.html">About</a></li>
-          <li><a href="activities.html">Activities</a></li>
-          <li><a href="experience.html">Experience</a></li>
-          <li><a href="contact.html">Contact</a></li>
-        </ul>
-      </nav>
-    </header>
-
-    <div class="page">
-      <h1>Hobbies and Activities</h1>
-      <ul>
-        <li>Rowing</li>
-        <li>Singing</li>
-        <li>Being in a Fraternity</li>
-      </ul>
-    </div>
-
-    <footer>
-      <p>&copy; 2021 Sammy Student |
-        <a href="https://github.com/prof-rossetti/student-site">source code</a>
-      </p>
-    </footer>
-  </body>
-</html>
