--- a/Behind.html
+++ b/Behind.html
@@ -18,11 +18,21 @@ encourage them in started their workout journey with structured workout plans, m
 
 <p style="text-align:center; font-size:x-large; color:aliceblue"> As a student, I am interest in working in either Marketing or Finance. If you are a recruiter by any chance or if your company is hiring for a Marketing or Finance position, feel free to downlaod my resume and contact me if you believe that I would be a good fit for the position.  </p>
 
-
-<p style= "font-size:large; color:aliceblue">
-<a href="Toure_Yasmine_GeorgeWashingtonUniversity.pdf"> Please, download my resume ! </a> <br>
-<a href="Current transcript.pdf"> Feel free to also download my transcript #128522 </a> <br>
-<a href="https://www.linkedin.com/in/yasmine-toure-4357a4207/"> Contact me on LinkedIn </a> </p>
+<ul style="font-size:large; color:aliceblue">
+<li> <a href="Toure_Yasmine_GeorgeWashingtonUniversity.pdf"> Please, download my resume ! </a> </li>
+<li> <a href="Current transcript.pdf"> Feel free to also download my transcript #128522 </a> </li>
+<li> <a href="https://www.linkedin.com/in/yasmine-toure-4357a4207/"> Contact me on LinkedIn </a> </li>
+</ul>
 
 </body>
  
+
+
+
+
+<ul>
+  <p style= "font-size:large; color:aliceblue">
+  <a href="Toure_Yasmine_GeorgeWashingtonUniversity.pdf"> Please, download my resume ! </a> <br>
+  <a href="Current transcript.pdf"> Feel free to also download my transcript #128522 </a> <br>
+  <a href="https://www.linkedin.com/in/yasmine-toure-4357a4207/"> Contact me on LinkedIn </a> </p>
+  </ul>
