--- a/Behind.html
+++ b/Behind.html
@@ -2,9 +2,9 @@
   <body style="background-color:pink">
   <title> WORKOUT WITH YASMINE!!! &#128151; </title>
   <div>
-    <h1 style="text-align:center; font-size: +5; font-style: italic; color: ivory;"> WORKOUT WITH YASMINE :</h1> 
-    <h2 style="text-align:center; font-size: +4; font-style: italic; color: ivory;"> A WORKOUT PLAN FOR WOMEN MADE BY A
-      WOMAN </h2> </h2>
+    <h1 style="text-align:center; font-size: +5; font-style: italic; color: ivory;"> <a href="index.html"> WORKOUT WITH YASMINE :</h1> </a>
+    <h2 style="text-align:center; font-size: +4; font-style: italic; color: ivory;"> <a href="index.html"> A WORKOUT PLAN FOR WOMEN MADE BY A
+      WOMAN </h2> </a> 
   </div>
 
   <p style="text-align:center;"><img src="images/image1.jpg" width="350" height="450"> </p>
@@ -20,19 +20,9 @@ encourage them in started their workout journey with structured workout plans, m
 
 <ul style="font-size:large; color:aliceblue">
 <li> <a href="Toure_Yasmine_GeorgeWashingtonUniversity.pdf"> Please, download my resume ! </a> </li>
-<li> <a href="Current transcript.pdf"> Feel free to also download my transcript #128522 </a> </li>
+<li> <a href="Current transcript.pdf"> Feel free to also download my transcript &#128522 </a> </li>
 <li> <a href="https://www.linkedin.com/in/yasmine-toure-4357a4207/"> Contact me on LinkedIn </a> </li>
 </ul>
 
 </body>
  
-
-
-
-
-<ul>
-  <p style= "font-size:large; color:aliceblue">
-  <a href="Toure_Yasmine_GeorgeWashingtonUniversity.pdf"> Please, download my resume ! </a> <br>
-  <a href="Current transcript.pdf"> Feel free to also download my transcript #128522 </a> <br>
-  <a href="https://www.linkedin.com/in/yasmine-toure-4357a4207/"> Contact me on LinkedIn </a> </p>
-  </ul>
