--- a/index.html
+++ b/index.html
@@ -3,15 +3,19 @@
 
   <title> WORKOUT WITH YASMINE!!! &#128151; </title>
 
-  <div>
-    <h1 style="text-align:center; font-size: +5; font-style: italic; color: ivory;"> WORKOUT WITH YASMINE :</h1> 
+ 
+    <div><h1 style="text-align:center; font-size: +5; font-style: italic; color: ivory;"> WORKOUT WITH YASMINE :</h1> 
     <h2 style="text-align:center; font-size: +4; font-style: italic; color: ivory;"> A WORKOUT PLAN FOR WOMEN MADE BY A
-      WOMAN </h2> </h2>
-  </div>
+      WOMAN </h2> </div>
+ 
 
-    <div><a href="Behind.html" h2 style="color: ivory; font-style: oblique; font-size: +2;"> The girl behind the website :GET TO KNOW ME </h2> </div>
-   <img src="images/IMG_2689.jpg" width="400" height="400">
+  <div><a href="Behind.html" h2 style="color: ivory; font-style: oblique; font-size: +2;"> The girl behind the website :GET TO KNOW ME </h2></div>
+   <div><img src="images/IMG_2689.jpg" width="400" height="400"></div>
   
+   <div> <a href="about.html" h3 style="color: ivory; font-style: oblique; font-size: +2; text-align: right;"> Workout Plans </h3></div>
+    <div><img src="th.jpg" width="400" height="400"></div>
+
+
       <nav>
         <ul>
           <li><a href="about.html">About me </a></li>
