--- a/index.html
+++ b/index.html
@@ -9,11 +9,11 @@
       WOMAN </h2> </div>
  
 
-  <div><a href="Behind.html" h2 style="color: ivory; font-style: oblique; font-size: +2;"> The girl behind the website :GET TO KNOW ME </h2></div>
-   <div><img src="images/IMG_2689.jpg" width="400" height="400"></div>
+  <div><a href="Behind.html" h2 style="color: ivory; font-style: oblique; font-size: +2"> The girl behind the website :GET TO KNOW ME </h2></div>
+   <div><img src="images/IMG_2689.jpg" width="400" height="400"> </div>
   
-   <div> <a href="about.html" h3 style="color: ivory; font-style: oblique; font-size: +2; text-align: right;"> Workout Plans </h3></div>
-    <div><img src="th.jpg" width="400" height="400"></div>
+   <div> <a href="plans.html" h3 style="color: ivory; font-style: oblique; font-size: +2;> Workout Plans </h3></div>
+    <div> <images/              width="400" height="400"> </div>
 
 
       <nav>
