--- a/plans.html
+++ b/plans.html
@@ -1,4 +1,59 @@
 <!DOCTYPE html>
+<html lang="en">
+<head> WORKOUT WITH YASMINE! </head>
+<body style="background-color:pink">
+
+  <title> WORKOUT WITH YASMINE!!! &#128151; </title>
+
+ 
+    <div><h1 style="text-align:center; font-size: +5; font-style: italic; color: ivory;"> WORKOUT WITH YASMINE :</h1> 
+    <h2 style="text-align:center; font-size: +4; font-style: italic; color: ivory;"> A WORKOUT PLAN FOR WOMEN MADE BY A
+      WOMAN </h2> </div>
+
+      <p style="font-size: large; color:aliceblue"> Here are some Youtube videos that are beginner-friendly and that will help you start your workout journey. </p>
+  
+</body>
+</html>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+<!DOCTYPE html>
+
+
+
+
+
 <html>
   <head>
     <meta charset="utf-8">
