--- a/index.html
+++ b/index.html
@@ -9,24 +9,17 @@
       WOMAN </h2> </div>
  
 
-  <div><a href="Behind.html" h2 style="color: ivory; font-style: oblique; font-size: +2"> The girl behind the website :GET TO KNOW ME </h2></div>
+  <div><a href="Behind.html" h3 style="color: ivory; font-style: oblique; font-size: +2"> The girl behind the website :GET TO KNOW ME </h3></div>
    <div><img src="images/IMG_2689.jpg" width="400" height="400"> </div>
   
+   <br>
+   
    <div><a href="plans.html" h3 style="color: ivory; font-style: oblique; font-size: +2"> Workout Plans </h3><div>
    <div> <img src="women.jpg" width="400" height="300"> </div>
 
+<br>
+   <div><a href="meals.html" h4 style="color: ivory; font-style: oblique; font-size: +2"> Meal plans </h4></div>
 
-      <nav>
-        <ul>
-          <li><a href="about.html">About me </a></li>
-          <li><a href="First of all, get to know me.html"> Work out plan</a></li>
-          <li><a href="experience.html"> Work out videos </a></li>
-          <li><a href="contact.html"> Yes you can contact me </a></li>
-        </ul>
-    
-        <a href="https://github.com/prof-rossetti/student-site">source code</a>
-      </p>
-    </footer>
   </body>
 
   </html>
