--- a/meals.html
+++ b/meals.html
@@ -1,3 +1,33 @@
+
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <title> WORKOUT WITH YASMINE!!! &#128151; </title>
+
+  <div>
+    <h1 style="text-align:center; font-size: +5; font-style: italic; color: ivory;"> <a href="index.html"> WORKOUT WITH YASMINE :</h1> </a>
+    <h2 style="text-align:center; font-size: +4; font-style: italic; color: ivory;"> <a href="index.html"> A WORKOUT PLAN FOR WOMEN MADE BY A
+      WOMAN </h2> </a> 
+  </div>
+
+</head>
+<body style="background-color:pink">
+
+
+</body>
+  
+
+</html>
+
+
+
+
+
+
+
+
+
+
 <!DOCTYPE html>
 <html>
   <head>
