--- a/meals.html
+++ b/meals.html
@@ -12,8 +12,14 @@
 
 </head>
 <body style="background-color:pink">
-
-
+  <p style="font-size: x-large; color:aliceblue"> 
+    <img src="Gym.webp" width="300" height="500">
+    <img src="Gym2.jpg" width="600" height="500">
+    <img src="gym 3.jpg" width="600" height="500"> 
+    <img src="gym 3.jpg" width="600" height="500"> 
+    
+    <br> I also provide meal plans that will help you along your journey. Those plans have specifically been conceived for women who want to loose weight. All the plans are low-calories diet and you will enjoy cooking those meals. It's a good way to be healthy while having fun in the kitchen ! 
+    
 </body>
   
 
