--- a/plans.html
+++ b/plans.html
@@ -15,7 +15,7 @@
         <img src="Gym.webp" width="300" height="500">
         <img src="Gym2.jpg" width="600" height="500">
         <img src="gym 3.jpg" width="600" height="500"> 
-        <img src="gym 3.jpg" width="600" height="500"> 
+        <img src="bla.jpg" width="600" height="500"> 
         
         <br> Here are some workout plans that are beginner-friendly and that will help you start your workout journey at the gym. I used them all and got amazing results. <br>
 
