--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
    <div><img src="images/IMG_2689.jpg" width="400" height="400"> </div>
   
    <br>
-   
+
    <div><a href="plans.html" h3 style="color: ivory; font-style: oblique; font-size: +2"> Workout Plans </h3><div>
    <div> <img src="women.jpg" width="400" height="300"> </div>
 
@@ -21,5 +21,8 @@
    <div><a href="meals.html" h4 style="color: ivory; font-style: oblique; font-size: +2"> Meal plans </h4></div>
 
   </body>
-
+  
+  <footer style=" font-size:x-small; color: aliceblue;">  This site is the property of the George Washington University.</footer>
   </html>
+
+  
