--- a/plans.html
+++ b/plans.html
@@ -22,7 +22,6 @@
         <br>
       Also feel free to check <a href="https://www.youtube.com/c/ChloeTing/videos"> Chloe Ting's videos</a> on Youtube. Her exercises are user-friendly and are also a good complement to the workout plans suggested above. </p>
 
-      
-  
 </body>
+<footer style=" font-size:x-small; color: aliceblue;">  The pictures on this website are from official health sources and are not my property.</footer>
 </html>
