--- a/meals.html
+++ b/meals.html
@@ -18,72 +18,11 @@
     <img src="gym 3.jpg" width="600" height="500"> 
     <img src="gym 3.jpg" width="600" height="500"> 
     
-    <br> I also provide meal plans that will help you along your journey. Those plans have specifically been conceived for women who want to loose weight. All the plans are low-calories diet and you will enjoy cooking those meals. It's a good way to be healthy while having fun in the kitchen ! 
-    
+    <br> I also provide meal plans that will help you along your journey. Those plans have specifically been conceived for women who want to loose weight. All the plans are low-calories diet and you will enjoy cooking those meals. It's a good way to be healthy while having fun in the kitchen ! Even if most of them are 7-day meal plans, you can repeat them each week or have a new 7-day meal plan each week to avoid repetition.  
+
 </body>
   
-
+<footer style=" font-size:x-small; color: aliceblue;">  The pictures on this website are from official health sources and are not my property.</footer>
 </html>
 
 
-
-
-
-
-
-
-
-
-<!DOCTYPE html>
-<html>
-  <head>
-    <meta charset="utf-8">
-    <title>Sammy Student | Work hard, play hard</title>
-    <link rel="stylesheet" href="stylesheets/sammy-style.css">
-  </head>
-  <body>
-    <header>
-      <p><a href="index.html">Sammy Student</a></p>
-      <nav>
-        <ul>
-          <li><a href="about.html">About</a></li>
-          <li><a href="activities.html">Activities</a></li>
-          <li><a href="experience.html">Experience</a></li>
-          <li><a href="contact.html">Contact</a></li>
-        </ul>
-      </nav>
-    </header>
-
-    <div class="page">
-      <h1>Professional Experience</h1>
-      <ul>
-        <li>A list</li>
-        <li>... of jobs and internships</li>
-        <li>... with full descriptions</li>
-      </ul>
-      <button id="download-resume" type="button" name="button">Download Resume</button>
-    </div>
-
-    <footer>
-      <p>&copy; 2021 Sammy Student |
-        <a href="https://github.com/prof-rossetti/student-site">source code</a>
-      </p>
-    </footer>
-
-    <script type="text/javascript">
-
-        //
-        // FYI: this is a website interactivity teaser...
-        //
-        //var resumeButton = document.getElementById("download-resume")
-        //
-        //function handleClick(event) {
-        //    console.log("YOU CLICKED ME!")
-        //    console.log(event.target)
-        //}
-        //
-        //resumeButton.addEventListener("click", handleClick, false)
-
-    </script>
-  </body>
-</html>
