--- a/index.html
+++ b/index.html
@@ -19,10 +19,9 @@
 
 <br>
    <div><a href="meals.html" h4 style="color: ivory; font-style: oblique; font-size: +2"> Meal plans </h4></div>
-
+    <div> <img src="indexp.png" width="400" height="300"> </div>
   </body>
   
-  <footer style=" font-size:x-small; color: aliceblue;">  This site is the property of the George Washington University.</footer>
   </html>
 
   
