--- a/meals.html
+++ b/meals.html
@@ -13,10 +13,10 @@
 </head>
 <body style="background-color:pink">
   <p style="font-size: x-large; color:aliceblue"> 
-    <img src="Gym.webp" width="300" height="500">
-    <img src="Gym2.jpg" width="600" height="500">
-    <img src="gym 3.jpg" width="600" height="500"> 
-    <img src="gym 3.jpg" width="600" height="500"> 
+    <img src="1.jpg" width="300" height="500">
+    <img src="2.jpg" width="600" height="500">
+    <img src="3.jpg" width="600" height="500"> 
+    <img src="4.png" width="600" height="500"> 
     
     <br> I also provide meal plans that will help you along your journey. Those plans have specifically been conceived for women who want to loose weight. All the plans are low-calories diet and you will enjoy cooking those meals. It's a good way to be healthy while having fun in the kitchen ! Even if most of them are 7-day meal plans, you can repeat them each week or have a new 7-day meal plan each week to avoid repetition.  
 
