--- a/Behind.html
+++ b/Behind.html
@@ -1,6 +1,10 @@
 <!DOCTYPE html>
-  <body style="background-color:pink">
+<head>
   <title> WORKOUT WITH YASMINE!!! &#128151; </title>
+</head>
+
+  <body style="background-color:pink">
+  
   <div>
     <h1 style="text-align:center; font-size: +5; font-style: italic; color: ivory;"> <a href="index.html"> WORKOUT WITH YASMINE :</h1> </a>
     <h2 style="text-align:center; font-size: +4; font-style: italic; color: ivory;"> <a href="index.html"> A WORKOUT PLAN FOR WOMEN MADE BY A
@@ -10,10 +14,10 @@
   <p style="text-align:center;"><img src="images/image1.jpg" width="350" height="450"> </p>
   <p style="text-align:center; font-size:x-large; color:aliceblue;"> Hello !!! 
   First I would like to thank you for visiting my page. I am Yasmine Toure, I am from Ivory Coast (West Africa), and I am a student at the George Washington University. My major is Business with a concentration in International Business.
-I started working out as a junior in college and realized that working out was for me an energy and mood booster. It is also a stress relief and it helps me organizing my work and life better.
+I started working out as a junior in college and realized that working out was for me an energy and mood booster. It is also a stress relief and it helps me organize my work and life better.
 
 
-I know that working out is not easy for everybody, especially women since they have a lotof duties (work, education, childcare). Sometimes, some women do not know where and how to start working out so I created this website to help them and 
+I know that working out is not easy for everybody, especially women since they have a lot of duties (work, education, childcare). Sometimes, some women do not know where and how to start working out so I created this website to help them and 
 encourage them in started their workout journey with structured workout plans, meals, and tips! </p>
 
 <p style="text-align:center; font-size:x-large; color:aliceblue"> As a student, I am interest in working in either Marketing or Finance. If you are a recruiter by any chance or if your company is hiring for a Marketing or Finance position, feel free to downlaod my resume and contact me if you believe that I would be a good fit for the position.  </p>
@@ -25,4 +29,6 @@ encourage them in started their workout journey with structured workout plans, m
 </ul>
 
 </body>
+
+</html>
  
