--- a/index.html
+++ b/index.html
@@ -1,25 +1,37 @@
 <!DOCTYPE html>
+<head>
+  <title> WORKOUT WITH YASMINE!!! &#128151; </title>
+</head>
+
   <body style="background-color:pink">
 
-  <title> WORKOUT WITH YASMINE!!! &#128151; </title>
 
- 
     <div><h1 style="text-align:center; font-size: +5; font-style: italic; color: ivory;"> WORKOUT WITH YASMINE :</h1> 
     <h2 style="text-align:center; font-size: +4; font-style: italic; color: ivory;"> A WORKOUT PLAN FOR WOMEN MADE BY A
       WOMAN </h2> </div>
  
 
-  <div><a href="Behind.html" h3 style="color: ivory; font-style: oblique; font-size: +2"> The girl behind the website :GET TO KNOW ME </h3></div>
+  <div>
+  <a href="Behind.html" style="color: ivory; font-style: oblique; font-size: +2">
+     <h3> The girl behind the website :GET TO KNOW ME </h3>
    <div><img src="images/IMG_2689.jpg" width="400" height="400"> </div>
-  
+  </a> </div>
+   
    <br>
 
-   <div><a href="plans.html" h3 style="color: ivory; font-style: oblique; font-size: +2"> Workout Plans </h3><div>
+   <div>
+     <a href="plans.html" h3 style="color: ivory; font-style: oblique; font-size: +2">
+      <h3> Workout Plans </h3>
    <div> <img src="women.jpg" width="400" height="300"> </div>
+     </a> </div> 
 
 <br>
-   <div><a href="meals.html" h4 style="color: ivory; font-style: oblique; font-size: +2"> Meal plans </h4></div>
+
+   <div>
+     <a href="meals.html" h4 style="color: ivory; font-style: oblique; font-size: +2">
+      <h3> Meal plans </h3>
     <div> <img src="indexp.png" width="400" height="300"> </div>
+    </a> </div>
   </body>
   
   </html>
