--- a/plans.html
+++ b/plans.html
@@ -20,7 +20,7 @@
         <br> Here are some workout plans that are beginner-friendly and that will help you start your workout journey at the gym. I used them all and got amazing results. <br>
 
         <br>
-      Also feel free to check <a href="https://www.youtube.com/c/ChloeTing/videos"> Chloe Ting's videos</a> on Youtube. Her exercises are user-friendly and are also a good complement to the workout plans suggested above. </p>
+      Also feel free to check <a href="https://www.youtube.com/c/ChloeTing/videos"> Chloe Ting's videos</a> on Youtube. Her exercises are beginner-friendly and are also a good complement to the workout plans suggested above. </p>
 
 </body>
 <footer style=" font-size:x-small; color: aliceblue;">  The pictures on this website are from official health sources and are not my property.</footer>
